# http-library

./: .gitignore  CMakeLists.txt  Makefile  README.md  server
examples/: http_library_client_demo.cpp  http_library_demo.cpp  http_library_server_demo.cpp
include/: codec_helpers.hpp  dotenv.hpp  http_client.hpp  http_client_helpers.hpp  http_codec.hpp  http_library.hpp  http_server.hpp  http_server_helpers.hpp  router.hpp  router_helpers.hpp
include/dotenv-cpp/: dotenv_cpp.hpp
scripts/: build.sh  clean.sh  install.sh
src/: http_codec.cpp  http_library.cpp  http_library_helpers.cpp  main.cpp  router.cpp  router_helpers.cpp
src/http-client/: http_client.cpp  http_client_helpers.cpp
src/http-server/: http_server.cpp  http_server_helpers.cpp
src/http-server/router/: router.cpp  router_helpers.cpp
